@@ -1,0 +1,10 @@
+root
+admin
+administrator
+webadmin
+sysadmin
+netadmin
+guest
+user
+web
+test
